--- a/BE_Note_Raphael.ipynb
+++ b/BE_Note_Raphael.ipynb
@@ -989,11 +989,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 26,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1033,15 +1038,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -1050,12 +1048,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prédictions sur la base de test : 97.03703703703704%\n"
+      "> Taux de classification pour k=1: 100.0000%\n",
+      "    - Matrice de distances pour k=1 (premier échantillon de la base de test) :\n",
+      " [5.19615242]\n",
+      "> Taux de classification pour k=3: 100.0000%\n",
+      "    - Matrice de distances pour k=3 (premier échantillon de la base de test) :\n",
+      " [5.19615242 6.70820393 8.60232527]\n",
+      "> Taux de classification pour k=5: 97.0370%\n",
+      "    - Matrice de distances pour k=5 (premier échantillon de la base de test) :\n",
+      " [5.19615242 6.70820393 8.60232527 8.66025404 8.88819442]\n"
      ]
     }
    ],
    "source": [
-    "\n",
     "def classifieurC1_Itheta(BA, BT, n_neigh):\n",
     "    # Extraction de la caractéristique Itheta\n",
     "    X_train_Itheta = BA[:, 0]  \n",
@@ -1068,15 +1073,26 @@
     "    # Prédiction sur la base de test\n",
     "    y_pred = knn.predict(X_test_Itheta)\n",
     "\n",
-    "    accuracy = np.mean(y_pred == y_test)  # Calcul de la précision (accuracy)\n",
+    "    distances, indices = knn.kneighbors(X_test_Itheta, n_neighbors=n_neigh, return_distance=True)  \n",
+    "    \n",
     "    accuracy = sk.metrics.accuracy_score(y_test, y_pred) * 100\n",
-    "    return y_pred, accuracy\n",
+    "    return y_pred, accuracy, distances\n",
     "\n",
-    "# Utilisation de la fonction classifieurC1_Itheta\n",
-    "y_pred_test, taux = classifieurC1_Itheta(X_train, X_test, n_neigh=5)  # Remplacez 5 par le nombre de voisins souhaité\n",
     "\n",
-    "# Affichage des prédictions\n",
-    "print(\"Prédictions sur la base de test : \"+str(taux) + \"%\")\n",
+    "# Utilisation de la fonction classifieurC1_Ir\n",
+    "k_values = [1, 3, 5]\n",
+    "for k in k_values:\n",
+    "    y_pred_test, taux, distances = classifieurC1_Itheta(X_train, X_test, n_neigh=k)\n",
+    "\n",
+    "    # Affichage des prédictions et du taux de classification\n",
+    "    print(f\"> Taux de classification pour k={k}: {taux:.4f}%\")\n",
+    "\n",
+    "    # Affichage de la matrice de distances pour le premier échantillon de la base de test\n",
+    "    print(f\"    - Matrice de distances pour k={k} (premier échantillon de la base de test) :\\n {distances[0]}\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
